// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ws reducer connection 1`] = `
Object {
  "connection": true,
  "tokens": Array [],
}
`;

exports[`ws reducer default 1`] = `
Object {
  "connection": false,
  "tokens": Array [],
}
`;
